django login email or username

--- a/django_firebase_auth/templates/firebase_authentication/login.html
+++ b/django_firebase_auth/templates/firebase_authentication/login.html
@@ -125,7 +125,7 @@
     <div>
         <form id="login" method="POST">
             {% csrf_token %}
-            Email: <input type="text" id="email" name="email">
+            Email or Username: <input type="text" id="email" name="email">
             <br>
             Password: <input type="password" id="password" name="password">
             <br>
